--- a/static/css/sample-app.css
+++ b/static/css/sample-app.css
@@ -1,3 +1,63 @@
-.jumbotron {
-  margin-top: 1em;  // add a little space
+.main {
+  color: blue;
+  text-decoration: underline;
+}
+
+.sub-main {
+  background:red;
+  text-align:center;
+  border:solid green 10px;
+  width :50%
+}
+.Brand-logo{
+  width:100%
+
+}
+
+.rule1{
+  margin-top: 45px;
+}
+.picture-p {
+  width:30%
+}
+ p {
+  font-size:20px;
+   padding-left: 30px;
+   padding-right: 30px;
+}
+ .rule2 {
+   margin-top:170px;
+ }
+ .come {
+   padding-left:60px;
+ }
+ .picture-f {
+   width:40%;
+ }
+ .rule3 {
+   margin-top:290px;
+ }
+ .rule4 {
+    padding: 20px;
+    font-size: 30px;
+    width: 50%;
+
+    text-decoration: none;
+
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 5%;
+}
+.bootom {
+
+    position:static;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: Black;
+    color: white;
+    text-align: center;
 }
